--- a/circle.yml
+++ b/circle.yml
@@ -1,21 +1,17 @@
 #
 # Build configuration for Circle CI
 #
-
-general:
-    artifacts:
-        - /home/ubuntu/AndroidCI/app/build/outputs/apk/
-
 machine:
-    environment:
-        ANDROID_HOME: /usr/local/android-sdk-linux
+   environment:
+     ANDROID_HOME: /usr/local/android-sdk-linux
 
 dependencies:
     override:
-        - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-24.0.2,android-24,extra-google-m2repository,extra-google-google_play_services,extra-android-support
+        - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-24.2.1,android-24,extra-google-m2repository,extra-google-google_play_services,extra-android-support
         - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
-
 test:
-    override:
-        - (./gradlew assemble):
-            timeout: 360
+  override:
+    - ./gradlew assembleDebug
+
+  post:
+    - cp -r app/build/outputs $CIRCLE_ARTIFACTS
