--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,7 @@ machine:
 
 dependencies:
     override:
+         - chmod +x gradlew
         - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-24.2.1,android-24,extra-google-m2repository,extra-google-google_play_services,extra-android-support
         - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
 test:
